--- a/client/manifest.json
+++ b/client/manifest.json
@@ -7,13 +7,11 @@
     "persistent": true,
     "page": "./src/chrome/background.html"
   },
-  "icons": {
-  "128": "./src/chrome/firebase.png"
-  },
   "chrome_url_overrides": {
     "newtab": "./public/dist/index.html"
   },
   "permissions": [
+    "cookies",
     "notifications",
     "background",
     "identity"
